--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,15 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "libreoffice-convert": "^1.6.0",
+    "mammoth": "^1.9.1",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pdf-merger-js": "^4.3.0",
     "pdfjs-dist": "^4.0.379",
-    "unpdf": "^1.0.6"
+    "puppeteer": "^24.12.1",
+    "unpdf": "^1.0.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
